[package]
name = "flowly-mp4"
version = "0.1.0"
authors = ["Andrey Tkachenko <andrey@aidev.ru>", "Alf <alf.g.jr@gmail.com>"]
edition = "2021"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/flowly-mp4"
readme = "README.md"
homepage = "https://github.com/flowly-team/flowly-mp4"
repository = "https://github.com/flowly-team/flowly-mp4"
keywords = ["flowly", "mp4", "video", "multimedia"]
license = "MIT"
include = ["src", "benches", "Cargo.toml", "README", "LICENSE"]

[dependencies]
thiserror = "^1.0"
byteorder = "1"
bytes = "1.1.0"
num-rational = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["io-util"] }
futures = "0.3.30"
const_format = "0.2.32"
pin-project-lite = "0.2.14"
async-stream = "0.3.5"
log = "0.4.27"
flowly = "0.4.1"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
glob = "0.3.2"
flowly-codec-openh264 = "0.1"

[[bench]]
name = "bench_main"
harness = false
